--- a/static/css/doc.css
+++ b/static/css/doc.css
@@ -5,7 +5,8 @@ p {
 input {
     width: 400px;
     height: 40px;
-
+    margin-right: 10px;
+    margin-bottom: 10px;
 
     position: relative;
     cursor: text;
